# incident_uploader

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
incidents/: admin.py  forms.py  models.py  urls.py  views.py
incidents/management/commands/: add_locations.py  create_incident_reports.py  create_shifts.py  fix_email.py  populate_base_users.py  test_logging.py
incidents/migrations/: 0001_initial.py  0002_shift_unique_shift_location.py
static/css/: base.css
templates/incidents/: incident_create.html  incident_detail.html  incident_form.html  incident_list.html
templates/incidents/partials/: image_upload_form.html  incident_image_item.html
